# OpenAI-Agents-SDK-Tasks

OpenAI-SDK-Agents-class-assignments/class-01-assignment/translator-Agent/src/translator_agent/: __init__.py  main.py
OpenAI-SDK-Agents-class-assignments/class-03-assignment/crypto-agent/src/crypto_agent/: __init__.py  main.py
OpenAI-SDK-Agents-class-assignments/class-04-assignment/shopping_agent/src/shopping_agent/: __init__.py  main.py
OpenAI-SDK-Agents-class-assignments/class-06-assignment/poetry_agent/src/poetry_agent/: __init__.py  main.py
OpenAI-SDK-Agents-class-assignments/class-07-assignment/input_guardrails/src/input_guardrails/: __init__.py  exercise_1.py  exercise_2.py  exercise_3.py
OpenAI-SDK-Agents-class-assignments/class-08-assignment/context/src/context/: __init__.py  main.py
basicuvpro/: pyproject.toml
basicuvpro/src/basicuvpro/: __init__.py  helloworld.py
basicuvpro/src/basicuvpro/newfolder/subfolder/: unicorndev.py
hello-agent/: pyproject.toml
hello-agent/src/hello_agent/: helloworld.py
markdown/: mark_down_cheat_sheet.html  mark_down_cheat_sheet.md
pydantic/module-1/: assignment.py  module-1.py
pydantic/module-10/: assignment.py  module-10.py  readme.md
pydantic/module-11/: assignment.py  module-11.py  readme.md
pydantic/module-12/: assignment-v1.py  assignment-v2.py  module-12.py  readme.md
pydantic/module-2/: assignment.py  module-2.py
pydantic/module-3/: assignment.py  module-3.py  readme.md
pydantic/module-4/: assignment.py  module-4.py  readme.md
pydantic/module-5/: assignment.py  module-5-a.py  module-5-b.py  module-5-c.py  module-5-d.py  readme.md
pydantic/module-6/: assignment-a.py  assignment-b.py  module-6.py  readme.md
pydantic/module-7/: assignment.py  module-7.py  readme.md
pydantic/module-8/: assignment.py  module-8.py  readme.md
pydantic/module-9/: assignment.py  module-9.py  readme.md
week-01/simpleAgent/: .env  README.md  pyproject.toml
week-01/simpleAgent/src/simpleagent/: __init__.py  main.py
week-02/helloworld/: pyproject.toml
week-02/helloworld/src/helloworld/: temp.py  tokens.py  tools.py
week-02/helloworld/src/helloworld/dynamicInstructions/: assignment.py  main.py
week-02/helloworld/src/helloworld/dynamicInstructions/context/: main.py
week-02/helloworld/src/helloworld/modelSettings/: tools.py
week-03/tool_calling/: .env  pyproject.toml
week-03/tool_calling/src/tool_calling/: __init__.py  basic_tool_assignment.py  main.py
week-03/tool_calling/src/tool_calling/advanced_tool_calling/: tool_dynamic_permission_02.py
week-03/tools/: .env  pyproject.toml
week-03/tools/src/tools/basic_tool/: main.py
week-04/context_memory_chatbot/: .gitignore  pyproject.toml
week-04/context_memory_chatbot/src/context_memory_chatbot/: __init__.py
week-04/context_memory_chatbot/src/context_memory_chatbot/context/: main.py
week-04/context_memory_chatbot/src/context_memory_chatbot/session_memory/: custom_simple_agent_class.py  customer_support_chatAgent.py  hello.py  operations.py  persist.py
week-05/streaming_agent_cloning/: pyproject.toml
week-05/streaming_agent_cloning/src/streaming_agent_cloning/: __init__.py
week-05/streaming_agent_cloning/src/streaming_agent_cloning/agent_clone_11/: Cloning_with_Different_Settings_02.py  Cloning_with_Different_Tools_03.py  Multiple_Clones_from_One_Base_04.py  basic_cloning.py
week-05/streaming_agent_cloning/src/streaming_agent_cloning/streaming/: main.py  streaming_joke.py  streaming_messages.py  streaming_tool_use.py
week-06/handoff/: README.md  pyproject.toml
week-06/handoff/src/handoff/advanced_handoff_22/: handoff_obj_01.py  handsoff_callbacks_02.py  is_enabled_04.py
week-06/handoff/src/handoff/advanced_handoff_22/Mini_Lab/: advanced_customer_support_handoff_system.py
week-06/handoff/src/handoff/advanced_handoff_22/input_filter/: input_filters_03.py  input_history.py  new_items.py  pre_handoff_items.py  remove_all_tools.py
week-06/handoff/src/handoff/assignment/: multi_agent_research_pipeline.py
week-06/handoff/src/handoff/basic_handoff_14/: main.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/: __init__.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/agent_lifecycle_19/: main.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/guardrails_18/: input_rails.py  output_rails.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/guardrails_18/advanced_safety_rails/cascading_guardrails/: all_filters.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/guardrails_18/advanced_safety_rails/cascading_guardrails/input_guardrails_filters/: profanity_filter.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/run_lifecycle_20/: chat_loop.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/structured_output_17/: exp_1.py  exp_2.py  exp_3.py  exp_4.py  exp_5.py  main.py
week-07/Guardrails_Structured_Output_Tracing/src/guardrails_structured_output_tracing/tracing_12/: main.py
week-08/agent/src/agent/custom_runner_23/: custom_runner.py  default_runner.py
week-08/agent/src/agent/custom_runner_23/conditional_handoff_3/: main.py
week-08/agent/src/agent/custom_runner_23/conditional_tool_2/: main.py
week-08/agent/src/agent/custom_runner_23/methods/: core_execution_customization.py  postprocessing.py  preprocessing.py
week-08/agent/src/agent/memory_management_22/mem0_memory_02/: main.py  main2.py
