[project]
name = "basicuvpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nehaltariq357", email = "143392985+nehaltariq357@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.4",
]

[project.scripts]
basicuvpro = "basicuvpro:main"
dev = "basicuvpro.helloworld:helloworld"
newcomplex = "basicuvpro.newfolder.subfolder.unicorndev:unicorndev"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
