[project]
name = "helloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nehaltariq357", email = "143392985+nehaltariq357@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.4",
]

[project.scripts]
helloworld = "helloworld:main"
dev = "helloworld.hello:simple_agent"
temp = "helloworld.modelSettings.temp:main"
tools = "helloworld.modelSettings.tools:main"
tokens = "helloworld.modelSettings.tokens:main"
ins = "helloworld.dynamicInstructions.main:main"
context= "helloworld.dynamicInstructions.context.main:main"
assign= "helloworld.dynamicInstructions.assignment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
