[project]
name = "streaming-agent-cloning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nehaltariq357", email = "143392985+nehaltariq357@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.7",
]

[project.scripts]
streaming-agent-cloning = "streaming_agent_cloning:main"
streaming = "streaming_agent_cloning.streaming.main:main"
streaming_msg = "streaming_agent_cloning.streaming.streaming_messages:streaming_msg"
streaming_joke = "streaming_agent_cloning.streaming.streaming_joke:main"
streaming_tool = "streaming_agent_cloning.streaming.streaming_tool_use:main"
basic_clone = "streaming_agent_cloning.agent_clone_11.basic_cloning:basic_cloning"
clone_settings = "streaming_agent_cloning.agent_clone_11.Cloning_with_Different_Settings_02:main"
clone_tools = "streaming_agent_cloning.agent_clone_11.Cloning_with_Different_Tools_03:main"
clone_multiple = "streaming_agent_cloning.agent_clone_11.Multiple_Clones_from_One_Base_04:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
