[project]
name = "handoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nehaltariq357", email = "143392985+nehaltariq357@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.9",
    "rich>=14.1.0",
]

[project.scripts]
handoff = "handoff:main"
basic = "handoff.basic_handoff_14.main:basic_handoff"
handoff_obj = "handoff.advanced_handoff_22.handoff_obj_01:handoff_obj"
handsoff_callbacks = "handoff.advanced_handoff_22.handsoff_callbacks_02:handsoff_callbacks"
input_filters = "handoff.advanced_handoff_22.input_filter.input_filters_03:input_filters"
remove_all_tools = "handoff.advanced_handoff_22.input_filter.remove_all_tools:remove_all_tools"
input_history = "handoff.advanced_handoff_22.input_filter.input_history:input_history"
pre_handoff_items = "handoff.advanced_handoff_22.input_filter.pre_handoff_items:pre_handoff_items"
new_items = "handoff.advanced_handoff_22.input_filter.new_items:new_items"
is_enabled = "handoff.advanced_handoff_22.is_enabled_04:is_enabled"
lab = "handoff.advanced_handoff_22.Mini_Lab.advanced_customer_support_handoff_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
